# mea-save-editor

./: .gitignore  CMakeLists.txt  io.github.thebill2001.mea-save-editor.desktop.in  io.github.thebill2001.mea-save-editor.metainfo.xml  thebill2001.mea-save-editor.metainfo.xml
.github/workflows/: BlueprintSettings.ini  CraftSettings.ini  build-windows.yml
forms/: landingwidget.ui  mainwindow.ui
src/: CMakeLists.txt  landingwidget.cpp  landingwidget.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  measaveeditorapplication.cpp  measaveeditorapplication.hpp  measaveeditorconfig.cpp  measaveeditorconfig.hpp  measaveeditorconfigbase.kcfg  measaveeditorconfigbase.kcfgc
src/data/: measavefile.cpp  measavefile.hpp  measavefileerror.cpp  measavefileerror.hpp  measavefileheader.cpp  measavefileheader.hpp  measavefilemanager.cpp  measavefilemanager.hpp  p_measavefileutils.hpp
src/qml/: Main.qml
src/utils/: datetime.cpp  datetime.hpp  number.hpp
src/utils/hashing/: djb.hpp
